Opened 7 years ago
Closed 7 years ago
#13784 closed bug (fixed)
[PowerStatus] The lightning symbol is not centered over the battery if text is present
Reported by: | Janus | Owned by: | Janus |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/PowerStatus | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Attachments (1)
Change History (3)
by , 7 years ago
Attachment: | lightning.png added |
---|
comment:1 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev51564.