[PowerStatus] Fixes some drawing glitches

* Fixes the position of the lightning over the battery
* Fixes the selection in the info Window (Why is the selected color hardcoded?)
* Fixes #13784